# niebieskie-aparaty-gallery

./: docker-compose.yml
niebieskie-aparaty-gallery-backend/: CLAUDE.md  Cargo.toml  Dockerfile
niebieskie-aparaty-gallery-backend/src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  openapi.rs  rate_limiter.rs
niebieskie-aparaty-gallery-frontend/: CLAUDE.md  Dockerfile  index.html  nginx.conf  openapi.json  package-lock.json  package.json  vite.config.js
niebieskie-aparaty-gallery-frontend/src/: gallery.js  lightbox.js  main.js  style.css
niebieskie-aparaty-gallery-frontend/src/services/: ApiService.js
